@@ -1,5 +1,12 @@
 2013-03-08  Guillaume Lazzara  <z@lrde.epita.fr>
 
+	Update use of math::round.
+
+	* mln/convert/impl/from_double_to_value.hh,
+	* mln/convert/impl/from_float_to_value.hh: Here.
+
+2013-03-08  Guillaume Lazzara  <z@lrde.epita.fr>
+
 	* doc/.gitignore: exclude .dox files.
 
 2013-03-08  Guillaume Lazzara  <z@lrde.epita.fr>
